--- a/css/index.css
+++ b/css/index.css
@@ -88,25 +88,49 @@ body{
             padding: 5px 10px;
         }
     }
-    /*.about-1::after{
-        content: " ";
-        height: 100px;
-        width: 20px;
+    .about-1::after{
+        content: '';
+        height: 3px;
+        width: 4px;
         background-color: #113aaa;
-        scale: .5 1;
         position: absolute;
-        margin: 24px 10px 0px -5px; 
-        animation: move linear;
-        animation-timeline: scroll();
+        margin: 28px 0px 0px 0px; 
+        animation: l linear;
+        animation-timeline: scroll(); 
     }
-    @keyframes move{
-        to{
-            scale: 1 1;
-        }
-    }*/
-    
-}
+  
+    .one{
+        width: 300px;
+        height: 900px;
+    }
 
+
+}
+@keyframes l{
+    to{
+        background-color: #cc1515;
+        padding-bottom: 200px;
+        height: 2px;
+    }
+    /* 25%{
+        background-color: #cc1515;
+        height: 10px;
+        width: 2px;
+    }
+    50%{
+        background-color: #cc1515;
+        width:800px;
+        height: 2px;
+    75%{
+        background-color: #cc1515;
+        height: 0px;
+    }
+    }
+    100%{
+        background-color: #cc1515;
+        height: 0px;
+    } */
+} 
 .line{
     height: 5px;
     width: 100%;
